fixed requirements not showing

--- a/user/src/pages/find-jobs/components/details-components/Details.module.css
+++ b/user/src/pages/find-jobs/components/details-components/Details.module.css
@@ -22,6 +22,9 @@
     right: 40px;
 }
 
+.modalBody {
+    display: grid;
+}
 
 .jobDescription {
     grid-column: span 2;
